--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
       /* Das Logo ist initial unsichtbar und wird per JS-Klasse .show eingeblendet */
       text-align: center; /* Hilft bei der Zentrierung, falls Kindelemente inline-block sind */
       opacity: 0; /* Initial unsichtbar */
-      transition: opacity 0.6s ease-in-out 0.5s; /* Logo blendet nach 0.5s ein, Dauer 0.6s */
+      transition: opacity 0.6s ease-in-out; /* Logo blendet ein über 0.6s, sobald .show aktiv ist */
     }
     #splash-screen .footer-logo.show {
       opacity: 1 !important; /* Macht das Logo sichtbar */
@@ -1305,10 +1305,10 @@
         // Schritt 1: Nach einer kurzen Verzögerung das Logo einblenden
         setTimeout(() => {
           splashLogo.classList.add('show');
-        }, 500); // Logo erscheint nach 0.5 Sekunden
+        }, 200); // Logo beginnt nach 0.2 Sekunden zu erscheinen
 
         // Schritt 2: Nachdem das Logo erschienen ist und kurz sichtbar war, den gesamten Splash Screen ausblenden
-        setTimeout(() => {
+        setTimeout(() => { // Neuer Wert: 0.2s (Logo Start) + 0.6s (Logo Fade-In) + 0.9s (Anzeigezeit) = 1.7s
           if (splashScreen) { // Erneute Prüfung, falls splashScreen zwischenzeitlich entfernt wurde
             splashScreen.classList.add('hide');
             
@@ -1320,7 +1320,7 @@
               }
             });
           }
-        }, 2500); // Gesamter Splash Screen beginnt nach 2.5s (0.5s Warten + 0.6s Logo-Fade-In + ca. 1.4s Anzeige) zu verschwinden
+        }, 1700); // Splash Screen beginnt nach 1.7s zu verschwinden
       }
 
       // Bestehendes Skript für die Navigation
