--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
   <style>
-        /* Für WebKit-basierte Browser (Chrome, Safari, Edge) */
+    ::selection {
+      background-color: #341700;  /* Hintergrundfarbe der Markierung */
+      color: white;               /* Textfarbe der Markierung */
+    }
+    /* Für WebKit-basierte Browser (Chrome, Safari, Edge) */
     ::-webkit-scrollbar {
       width: 8px;          /* schmaler */
       height: 8px;         /* falls horizontaler Scrollbar */
