--- a/faq.html
+++ b/faq.html
@@ -171,17 +171,30 @@
 
     /* Hero Section für das große Bild */
     .hero-section {
-      height: 100vh; /* Volle Viewport-Höhe */
-      background-image: url('/assets/faq.png'); /* Pfad zum Hintergrundbild */
-      background-size: cover;
-      background-position: center;
+      height: 100vh; 
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      color: #ffffff; /* Standardtextfarbe für Inhalte im Hero-Bereich */
-      position: relative; /* Für absolute Positionierung von Kindelementen */
+      color: #ffffff; 
+      position: relative; 
+      overflow: hidden; /* Wichtig, um den gezoomten Hintergrund zu beschneiden */
+    }
+
+    .hero-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('/assets/faq.png'); /* Hintergrundbild hierher verschoben */
+      background-size: cover;
+      background-position: center;
+      z-index: -1; /* Stellt sicher, dass es hinter dem Inhalt liegt */
+      /* Sanfter Übergang für die Skalierung, um Ruckeln zu minimieren */
+      /* Kann angepasst oder entfernt werden, je nach gewünschtem Verhalten */
+      transition: transform 0.1s ease-out;
     }
 
     .hero-section h1 {
@@ -899,7 +912,7 @@
   </nav>
 
   <div class="hero-section">
-    <div class="hero-background"></div> <!-- Neuer Container für das Hintergrundbild -->
+    <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
       <h1>Fragen stellen.<br>Antworten finden.</h1>
       <h2>Was Sie rund um unsere Praxis, Abläufe und Leistungen wissen<br>möchten – klar erklärt und gut verständlich.</h2>
@@ -1094,8 +1107,8 @@
         if (heroBackground) {
           let scrollPosition = window.pageYOffset;
           // Der Divisor (z.B. 4000) steuert, wie schnell der Zoom erfolgt.
-          // Ein größerer Wert bedeutet langsameren Zoom.
-          let scaleValue = 1 + scrollPosition / 4000; 
+          // Ein größerer Wert bedeutet langsameren/weniger Zoom.
+          let scaleValue = 1 + scrollPosition / 7000; 
           heroBackground.style.transform = `scale(${scaleValue})`;
         }
       }
