--- a/leistungen.html
+++ b/leistungen.html
@@ -172,9 +172,6 @@
     /* Hero Section für das große Bild */
     .hero-section {
       height: 100vh; /* Volle Viewport-Höhe */
-      background-image: url('/assets/leistungen.png'); /* Beispielbild, bitte ersetzen */
-      background-size: cover;
-      background-position: center;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -182,6 +179,20 @@
       text-align: center;
       color: #ffffff; /* Standardtextfarbe für Inhalte im Hero-Bereich */
       position: relative; /* Für absolute Positionierung von Kindelementen */
+      overflow: hidden; /* Wichtig, um den gezoomten Hintergrund zu beschneiden */
+    }
+
+    .hero-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('/assets/leistungen.png'); /* Hintergrundbild hierher verschoben */
+      background-size: cover;
+      background-position: center;
+      z-index: -1; /* Stellt sicher, dass es hinter dem Inhalt liegt */
+      transition: transform 0.1s ease-out;
     }
 
     .hero-section h1 {
@@ -1241,6 +1252,7 @@
   </nav>
 
   <div class="hero-section">
+    <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
       <h1>Leistungen.<br>Klar & persönlich.</h1>
       <h2>Diagnostik, Behandlung und Vorsorge – alles in Ihrer Hausarztpraxis.</h2>
@@ -1945,6 +1957,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       const mainNav = document.querySelector('.main-nav');
       const navLinksUl = document.querySelector('.nav-links'); // Selektiert das <ul> Element
+      const heroBackground = document.querySelector('.hero-background');
       // Alle Sektionen auswählen, bei denen der Farbwechsel stattfinden soll
       // Passen Sie diese Selektoren an die Sektionen auf der leistungen.html Seite an,
       // falls der Farbwechseleffekt gewünscht ist.
@@ -1956,6 +1969,17 @@
       }
 
       const menuHeight = mainNav.offsetHeight;
+
+      // Parallax Zoom für Hero-Background
+      function handleHeroZoom() {
+        if (heroBackground) {
+          let scrollPosition = window.pageYOffset;
+          // Der Divisor (z.B. 7000) steuert, wie schnell der Zoom erfolgt.
+          // Ein größerer Wert bedeutet langsameren Zoom.
+          let scaleValue = 1 + scrollPosition / 7000; 
+          heroBackground.style.transform = `scale(${scaleValue})`;
+        }
+      }
 
       function checkMenuPosition() {
         let shouldBeDark = false;
@@ -1978,11 +2002,13 @@
           navLinksUl.classList.remove('dark-text');
           mainNav.classList.remove('strong-blur'); // Stärkeren Blur entfernen
         }
+        handleHeroZoom();
       }
 
       window.addEventListener('scroll', checkMenuPosition);
       window.addEventListener('resize', checkMenuPosition); // Auch bei Größenänderung prüfen
       checkMenuPosition(); // Initiale Prüfung beim Laden der Seite
+      handleHeroZoom(); // Initialen Zoom-Status setzen
 
       // Modal-Logik
       const modalOverlay = document.getElementById('infoModalOverlay');
