--- a/kontakt.html
+++ b/kontakt.html
@@ -176,7 +176,7 @@
     /* Hero Section für das große Bild */
     .hero-section {
       height: 100vh; /* Volle Viewport-Höhe */
-      background-image: url('/assets/startseite.png'); /* Beispielbild, bitte ersetzen */
+      background-image: url('/assets/kontakt.png'); /* Beispielbild, bitte ersetzen */
       background-size: cover;
       background-position: center;
       display: flex;
